<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginRight="@dimen/_20dp"
            android:text="@string/first_textview" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/second_textview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_250dp">

        <Button
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/selector_text"
            android:layout_marginLeft="10dp"
            android:text="@string/button_one"/>

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="@dimen/_20dp"
            android:textColor="@color/selector_text"
            android:text="@string/button_two"/>

        <Button
            android:id="@+id/button_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/selector_text"
            android:text="@string/button_three"/>
    </LinearLayout>


</RelativeLayout>