<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_7dp">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:text="@string/user_name"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_3dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:paddingRight="@dimen/_20dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_3dp"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:text="@string/email"/>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>